# Randomness

./: README.md
doc/: readme.txt
doc/cephes/: cmath.tgz  ellf.tgz  ldouble.tgz  qfloat.tgz  single.tgz
doc/windows_erf/: readme.txt
include/Randomness/A2xKits/: defs.h  matrix.h
include/Randomness/A2xTest/: externs.h
src/Wizard/: CMakeLists.txt  build.cmake
src/Wizard/Randomness/: CMakeLists.txt  Randomness.cpp  Randomness.h  Randomness_Global.h  bytesToBitSequence.c  post_build.sh
src/Wizard/Randomness/A2xKits/: A2xKits.h  CMakeLists.txt  dfft.h  matrix.c
src/Wizard/Randomness/A2xTest/: A2xTest.h  CMakeLists.txt  approximateEntropy.c  binaryDerivate.c  blockFrequency.c  cusum.c  decls.h  discreteFourierTransform.c  frequency.c  linearComplexity.c  longestRunOfOnes.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  pokerDetect.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  runsDistribution.c  selfCorrelation.c  serial.c  universal.c
src/Wizard/testTRNG/: CMakeLists.txt  assess.cpp  bytesToBitSequence.c  cephes.c  cephes.h  decls.h  externs.h  generators.c  generators.h  genutils.c  matrix.c  matrix.h  utilities.c  utilities.h
src/Wizard/testTRNG/subXXX/: CMakeLists.txt
third/: install_modules.sh
