cmake_minimum_required(VERSION 3.16)

project(Wizard)

add_subdirectory(Randomness)
add_subdirectory(testTRNG)

#message("CMAKE_HOME_DIRECTORY = " ${project})
#message("CMAKE_HOME_DIRECTORY = " ${CMAKE_HOME_DIRECTORY})
#message("PROJECT_SOURCE_DIR = " ${PROJECT_SOURCE_DIR})
#message("PROJECT_BINARY_DIR = " ${PROJECT_BINARY_DIR})
#message("CMAKE_SOURCE_DIR = " ${CMAKE_SOURCE_DIR})
#message("CMAKE_BINARY_DIR = " ${CMAKE_BINARY_DIR})
#message("CMAKE_CACHEFILE_DIR = " ${CMAKE_CACHEFILE_DIR})
#message("CMAKE_INCLUDE_CURRENT_DIR = " ${CMAKE_INCLUDE_CURRENT_DIR})
#message("CMAKE_CURRENT_SOURCE_DIR = " ${CMAKE_CURRENT_SOURCE_DIR})
#message("CMAKE_CURRENT_LIST_DIR = " ${CMAKE_CURRENT_LIST_DIR})
#message("CMAKE_CURRENT_BINARY_DIR = " ${CMAKE_CURRENT_BINARY_DIR})
#message("CMAKE_PDB_OUTPUT_DIRECTORY = " ${CMAKE_PDB_OUTPUT_DIRECTORY})
#message("CMAKE_ARCHIVE_OUTPUT_DIRECTORY = " ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
#message("CMAKE_LIBRARY_OUTPUT_DIRECTORY = " ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
#message("CMAKE_RUNTIME_OUTPUT_DIRECTORY = " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})


